sized down cards, fixed some alignment issues, footer working fully

--- a/input.scss
+++ b/input.scss
@@ -22,7 +22,6 @@ $orange: #cc9543;
   font-family: "Norse-Bold";
 }
 .container {
-  display: inline-flex;
   justify-content: center;
   width: 100%;
   margin-top: 5em;
@@ -32,9 +31,10 @@ $orange: #cc9543;
   flex-wrap: wrap;
   justify-content: space-around;
   width: 100%;
+  margin-bottom: 2rem;
 }
 .card {
-  width: 100%;
+  width: 98%;
   height: 100%;
   margin-top: 15px;
   display: inline-grid;
@@ -116,7 +116,7 @@ $orange: #cc9543;
   }
   .profile {
     display: inline-grid;
-    justify-content: center;
+    justify-items: center;
     padding: 2% 0;
   }
   .col-sm {
@@ -174,7 +174,6 @@ $orange: #cc9543;
       display: flex;
       justify-content: space-around;
       list-style: none;
-      // margin: 0 5em;
       li {
         margin: 0 1em;
         font-weight: bold;
@@ -188,13 +187,19 @@ $orange: #cc9543;
     justify-content: space-between;
     ul {
       visibility: visible;
+      li {
+        font-weight: bold;
+      }
     }
   }
   .profile {
     display: inline-grid;
-    justify-content: center;
+    // justify-content: center;
+    justify-items: center;
     align-items: center;
-    padding: 0% 0;
+    * {
+      margin: 1em 0;
+    }
   }
   .col-md {
     &-1 {
@@ -280,7 +285,7 @@ $orange: #cc9543;
   }
   .profile {
     display: flex;
-    padding: 2% 0;
+    padding: 1% 0;
     justify-content: space-around;
     align-items: center;
   }
